@@ -177,7 +177,7 @@ public class FloatPackedCS extends PackedMapCS {
 		if (this.dimension >= 4)
 			newCoord[len + 3] = (float) coordinate.getOrdinate(3); // M
 		for (int i = len + dimension; i < coords.length + dimension; i++) {
-			newCoord[i] = coords[i];
+			newCoord[i] = coords[i-dimension];
 		}
 		coords = newCoord;
 	}
